
2021-08-24  Ron Norman <rjn@inglenet.com>

	* tree.c: Fix bug in new code for folding constant expressions

2021-08-01  Ron Norman <rjn@inglenet.com>

	* cobc.c: For listing of REPORT show STEP value
	* codegen.c: Changes for REPORT to handle VARYING, nested OCCURS
	         and each LINE has its own unique data area which allows
			 the application to make changes via normal COBOL verbs
			 cb_code_field made public
	* parser.y: Removed warnings about VARYING and nested OCCURS
	* typeck.c: Use extern cb_code_field
	* sqlxfdgen.c: Use extern cb_code_field
	* tree.h: Additional fields for REPORT (varying, etc)
	* tree.c: Changes so that each field of a REPORT line has 
	         its own storage area
			 The REPORT field  offset and report_column as computed
			 to be exactly where the data should be in the print line
	          
2021-07-29  Ron Norman <rjn@inglenet.com>

	* flag.def, cobc.c: Add -fdatamap to usage report
	          
2021-07-23  Ron Norman <rjn@inglenet.com>

	* tree.c: A few more checks for folding constant expressions
			Check for + 0, * 1, / 1, * 0

2021-07-12  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (cobc_getenv_path): drop invalid list from path
	* config.c (cb_load_std): fixed old error passing enum instead of int
	* parser.y: minor adjustments to USE handling
	* pplex.l: drop "spurious $" in col 7 rule, fixing bug #577

2021-07-07  Simon Sobisch <simonsobisch@gnu.org>

	* reserved.c, scanner.l, tree.c. pplex.l: use quotes again for including bison
	  generated headers, fixing bug #721
	* parser.y, reserved.c, scanner.l, tree.c: work around bad Windows SDK header
	* pplex.l: fixed rule that could prevent PROCESS/CBL to work as intended

2021-07-06  Ron Norman <rjn@inglenet.com>

	* tree.h: Add cb_field  flag_binary_assign  indicates simple assign 
	* field.c: If field is effectively a machine 'int' set flag_binary_assign
	* codegen.c: Only use cob_set_llcon is not flag_binary_assign